--- a/varela/src/App.css
+++ b/varela/src/App.css
@@ -405,3 +405,15 @@ p {
 #aboutme {
     text-decoration: none;
 }
+
+#lineUp {
+	display: inline;
+}
+
+#lineSpace {
+	text-decoration: none;
+	color: white;
+	padding-left: 15px;
+	padding-right: 15px;
+	font-size: 12px;
+}
